; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwmon/extr_jc42.c_jc42_is_visible.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwmon/extr_jc42.c_jc42_is_visible.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.jc42_data = type { i32 }

@JC42_CFG_EVENT_LOCK = common dso_local global i32 0, align 4
@JC42_CFG_TCRIT_LOCK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32, i32)* @jc42_is_visible to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @jc42_is_visible(i8* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.jc42_data*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %12 = load i8*, i8** %5, align 8
  %13 = bitcast i8* %12 to %struct.jc42_data*
  store %struct.jc42_data* %13, %struct.jc42_data** %9, align 8
  %14 = load %struct.jc42_data*, %struct.jc42_data** %9, align 8
  %15 = getelementptr inbounds %struct.jc42_data, %struct.jc42_data* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  store i32 %16, i32* %10, align 4
  store i32 292, i32* %11, align 4
  %17 = load i32, i32* %7, align 4
  switch i32 %17, label %48 [
    i32 129, label %18
    i32 132, label %18
    i32 136, label %27
    i32 134, label %36
    i32 133, label %47
    i32 130, label %47
    i32 128, label %47
    i32 131, label %47
    i32 135, label %47
  ]

18:                                               ; preds = %4, %4
  %19 = load i32, i32* %10, align 4
  %20 = load i32, i32* @JC42_CFG_EVENT_LOCK, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %26, label %23

23:                                               ; preds = %18
  %24 = load i32, i32* %11, align 4
  %25 = or i32 %24, 128
  store i32 %25, i32* %11, align 4
  br label %26

26:                                               ; preds = %23, %18
  br label %49

27:                                               ; preds = %4
  %28 = load i32, i32* %10, align 4
  %29 = load i32, i32* @JC42_CFG_TCRIT_LOCK, align 4
  %30 = and i32 %28, %29
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %35, label %32

32:                                               ; preds = %27
  %33 = load i32, i32* %11, align 4
  %34 = or i32 %33, 128
  store i32 %34, i32* %11, align 4
  br label %35

35:                                               ; preds = %32, %27
  br label %49

36:                                               ; preds = %4
  %37 = load i32, i32* %10, align 4
  %38 = load i32, i32* @JC42_CFG_EVENT_LOCK, align 4
  %39 = load i32, i32* @JC42_CFG_TCRIT_LOCK, align 4
  %40 = or i32 %38, %39
  %41 = and i32 %37, %40
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %46, label %43

43:                                               ; preds = %36
  %44 = load i32, i32* %11, align 4
  %45 = or i32 %44, 128
  store i32 %45, i32* %11, align 4
  br label %46

46:                                               ; preds = %43, %36
  br label %49

47:                                               ; preds = %4, %4, %4, %4, %4
  br label %49

48:                                               ; preds = %4
  store i32 0, i32* %11, align 4
  br label %49

49:                                               ; preds = %48, %47, %46, %35, %26
  %50 = load i32, i32* %11, align 4
  ret i32 %50
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
